tests/expectations/compiler/function/unit_parameter_fail.out
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:2:5
     |
   2 |     x: (),
     |     ^^^^^
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:7:13
     |
   7 |     fn main(x: ()) {}
     |             ^^^^^
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:9:14
     |
   9 |     fn other(x: [(); 2]) {}
     |              ^^^^^^^^^^
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:11:25
     |
  11 |     fn yet_another() -> [(); 2] {}
     |                         ^^^^^^^
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:11:5
     |
  11 |     fn yet_another() -> [(); 2] {}
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
